# Cookbook-of-SPL-Recipes

./: .gitignore  CLAUDE.md  GEMINI.md  Makefile  README.md  prompt-gemini.md  pyproject.toml  requirements.txt  resolve-cookbook-issues-1.md
.github/workflows/: ci.yml
docs/: book-plan.md  brainstorming-ideas.md  codebase-review-by-opus.md  graphics-ideas.md  prompt-gemini.md  resolve-cookbook-issues-1.md
drafts/: about-the-author.md  ch00-0-preface.md  ch00-1-why-declarative.md  ch00-2-installing-spl-llm.md  ch01-1-hello-world.md  ch01-2-ollama-proxy.md  ch01-3-multilingual.md  ch02-1-self-refine.md  ch02-2-react-agent.md  ch02-3-plan-and-execute.md  ch02-4-reflection-agent.md  ch02-5-multi-model-pipeline.md  ch02-6-nested-procedures.md  ch03-1-chain-of-thought.md  ch03-3-hypothesis-tester.md  ch04-1-safe-generation.md  ch04-2-guardrails-pipeline.md  ch05-1-rag-query.md  ch05-2-memory-conversation.md  ch06-1-debate-arena.md  ch06-2-multi-agent-collaboration.md  ch06-4-socratic-tutor.md  ch07-1-map-reduce-summarizer.md  ch07-2-code-review.md  ch07-3-text2spl-demo.md  ch07-5-data-extraction.md  ch07-7-meeting-actions.md  ch07-8-code-gen-tests.md  ch08-1-model-showdown.md  ch08-2-batch-test.md  ch08-3-ab-test.md  ch09-2-recipe-maker.md  preface-spl-cookbook-draft.md
drafts/book-v0.1/: ch00-0-preface.md  ch00-1-why-declarative.md  ch00-2-installing-spl-llm.md  ch01-1-hello-world.md  ch01-2-ollama-proxy.md  ch01-3-multilingual.md  ch01-4-few-shot-learning.md  ch02-1-self-refine.md  ch02-2-react-agent.md  ch02-3-plan-and-execute.md  ch02-4-reflection-agent.md  ch02-5-multi-model-pipeline.md  ch02-6-nested-procedures.md  (+27 more)
memory/: MEMORY.md  feedback_book_version.md  project_spl_location.md
references/: Momagrid  Momahub  SPL  dd-arxiv  zinets
scripts/: book-header.tex  compile_book.sh  compile_book_pdf.py  readme.md  recipe_kitchen.py
(+199 files in other folders)
